api-gw/nginx/cmbc/f5-manage09/3.2.15/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ws-ingress
  namespace: f5-manage09
  annotations:
    nginx.org/websocket-services: "ws-app-svc"
spec:
  ingressClassName: nginx
  rules:
  - host: ws.f5manage09.test.cmbc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ws-app-svc
            port:
              number: 80
